# central

./: .gitignore  GLM4_TEST_NOTE.txt  README.md  SCALE.md  cognition_20260317.yaml  main.py  pyproject.toml  temp_thread_confabulation.txt
.letta/: settings.json
archive/: 20260317_224009_published.yaml  20260318_034226_published.yaml
blog/: greengale_published.json  published.json
data/: ask_sent.txt  concepts.json  consent.json  ecosystem_health_20260408_113704.json  ecosystem_health_20260408_123536.json  liked.json  liked_posts.txt  metrics.jsonl  network_graph.json  published_messages.txt  social_graph.json  void-finetune-sample.jsonl  void-sample.jsonl  void-system-context.txt  void-system-lean.txt
docs/: CNAME  index.html  index.md  livestream.html  memory-infrastructure.md  package-lock.json  package.json
drafts/: public-cognition.md
handlers/: README.md  package-lock.json  package.json  tsconfig.json
hooks/: central-active.py  enforce-comms.py  enforce-subagents.py  inject-comms-reports.py  livestream.py  memory-verify.py  publish-response.py  read-comms-reports.py  redact.py
indexer/: .env.example  Dockerfile  Procfile  README.md  backfill.py  fly.toml  pyproject.toml  reembed.py  run-api.sh  run-worker.sh
indexer/indexer/: __init__.py  app.py  backfill.py  db.py  embeddings.py  worker.py
indexer/lexicons/: network.comind.agents.list.json  network.comind.context.load.json  network.comind.index.stats.json  network.comind.search.query.json  network.comind.search.similar.json
lexicons/: README.md  network.comind.agent.profile.json  network.comind.agent.registration.json  network.comind.agents.list.json  network.comind.claim.json  network.comind.concept.json  network.comind.devlog.json  network.comind.hypothesis.json  network.comind.index.stats.json  network.comind.memory.json  network.comind.observation.json  network.comind.search.query.json  network.comind.search.similar.json  network.comind.signal.json  network.comind.thought.json
mcp/: README.md  pyproject.toml  server.py
(+237 files in other folders)
