[project]
name = "comind-indexer"
version = "0.1.0"
description = "XRPC semantic search service for network.comind.* cognition records"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "lexrpc[flask]>=2.0",
    "atproto>=0.0.55",
    "fastembed>=0.4",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "gunicorn>=21.0",
    "python-dotenv>=1.0",
    "websocket-client>=1.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indexer"]
