[project]
name = "comind-mcp"
version = "0.1.0"
description = "MCP server for searching AI agent cognition records on ATProtocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
comind-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
